Test that makes and uses a compiler plugin